--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,7 @@ celerybeat.pid
 .venv
 env/
 venv/
+venv312/
 ENV/
 env.bak/
 venv.bak/
@@ -163,5 +164,13 @@ cython_debug/
 example/
 try_code/
 config.txt
-main.spec
 .DS_Store
+
+# for Pyinstaller
+main.spec
+
+# for Poetry
+poetry.lock
+pyproject.toml
+
+# for debug
